--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ LLM_PROVIDER=lmstudio
 # LM Studio Configuration
 # ----------------------
 # Local LM Studio server
-LMSTUDIO_ENDPOINT=http://100.80.17.113:301/v1/chat/completions
+LMSTUDIO_ENDPOINT=http://localhost:1234/v1/chat/completions
 LMSTUDIO_API_KEY=EMPTY
-LMSTUDIO_MODEL=local-model
+LMSTUDIO_MODEL=local_model
 
 # DeepSeek Configuration
 # ---------------------
@@ -86,5 +86,5 @@ DEBUG_SHOW_FULL_ERRORS=true
 # Output Configuration
 # -------------------
 # Controls output behavior
-OUTPUT_DESTINATION_PATH=E:\Knowledge\Study\dp_know
+OUTPUT_DESTINATION_PATH=
 OUTPUT_MOVE_PROCESSED=true
