--- a/.env
+++ b/.env
@@ -12,35 +12,35 @@ LMSTUDIO_MODEL=local_model
 
 # DeepSeek Configuration
 # ---------------------
-# Get your API key from: https://platform.deepseek.com/
+# Get your API key from: https://platform.deepseek.com/v1/chat/completions
 DEEPSEEK_ENDPOINT=https://api.deepseek.com/v1/chat/completions
 DEEPSEEK_API_KEY=
 DEEPSEEK_MODEL=deepseek-reasoner
 
 # OpenAI Configuration
 # -------------------
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_ENDPOINT=https://api.openai.com/v1
+# Get your API key from: https://platform.openai.com/api-keys/chat/completions or https://openrouter.ai/api/v1/chat/completions(comes to error if no /chat/completions)
+OPENAI_ENDPOINT=https://api.openai.com/v1/chat/completions
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
 
 # Anthropic Configuration
 # ----------------------
-# Get your API key from: https://console.anthropic.com/
+# Get your API key from: https://console.anthropic.com/v1/messages
 ANTHROPIC_ENDPOINT=https://api.anthropic.com/v1/messages
 ANTHROPIC_API_KEY=
 ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 
 # Google Configuration
 # -------------------
-# Get your API key from: https://ai.google.dev/
+# Get your API key from: https://ai.google.dev/v1/models
 GOOGLE_ENDPOINT=https://generativelanguage.googleapis.com/v1/models
 GOOGLE_API_KEY=
 GOOGLE_MODEL=gemini-2.0-flash-exp
 
 # Mistral Configuration
 # --------------------
-# Get your API key from: https://console.mistral.ai/
+# Get your API key from: https://console.mistral.ai/v1
 MISTRAL_ENDPOINT=https://api.mistral.ai/v1
 MISTRAL_API_KEY=
 MISTRAL_MODEL=mistral-large-latest
