--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # LLM API Configuration
 # ====================
-# Set LLM_PROVIDER to one of: lmstudio, deepseek, openai, anthropic, google, mistral, azure_openai, ollama
+# Set LLM_PROVIDER to one of: lmstudio, deepseek, openai, anthropic, google, mistral, azure_openai, ollama, openrouter
 LLM_PROVIDER=lmstudio
 
 # LM Studio Configuration
@@ -23,6 +23,14 @@ DEEPSEEK_MODEL=deepseek-reasoner
 OPENAI_ENDPOINT=https://api.openai.com/v1/chat/completions
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o
+
+# OpenRouter Configuration
+# -----------------------
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_ENDPOINT=https://openrouter.ai/api/v1/chat/completions
+OPENROUTER_API_KEY=
+OPENROUTER_MODEL=deepseek/deepseek-chat-v3-0324:free
+OPENROUTER_FALLBACK_MODEL=mistralai/mistral-small-3.1-24b-instruct:free
 
 # Anthropic Configuration
 # ----------------------
@@ -67,6 +75,14 @@ SEARCH_MAX_RESULTS=10
 SEARCH_MAX_PAGES=10
 SEARCH_TIMEOUT=120
 SEARCH_SHOW_PROGRESS=true
+
+# Token Configuration
+# ------------------
+# Controls token limits and chunk sizes
+MAX_TOKENS=16384
+MAX_CHUNK_SIZE=48000 
+MIN_TOKEN_THRESHOLD=5000
+MAX_TOKEN_THRESHOLD=20000
 
 # Schedule Configuration
 # ---------------------
