--- a/.env
+++ b/.env
@@ -78,11 +78,11 @@ SEARCH_SHOW_PROGRESS=true
 
 # Token Configuration
 # ------------------
-# Controls token limits and chunk sizes
-MAX_TOKENS=16384
-MAX_CHUNK_SIZE=48000 
+# Controls token limits and chunk sizes (MAX_TOKENS > MAX_CHUNK_SIZE / 4)
+MAX_TOKENS=8192
+MAX_CHUNK_SIZE=24000 
 MIN_TOKEN_THRESHOLD=5000
-MAX_TOKEN_THRESHOLD=20000
+MAX_TOKEN_THRESHOLD=10000
 
 # Schedule Configuration
 # ---------------------
